# apio

./: .coveragerc  .gitignore  .pylintrc  .travis.yml  404.html  BOARDS.md  CHANGELOG.md  COMMANDS.md  COMMANDS.txt  COMMANDS_HELP.md  DEVELOPER.md  DEVELOPERS.md  FAQ.md  FPGAS.md  Makefile  README-PYPI.md  README.md  apio.py  apio_run.py  index.html  install  install.py  mkdocs.yml  pyproject.toml  pytest-coverage.sh  scons_run.py  setup.py  tasks.py  tox.ini  update_boards_doc.sh  update_commands_doc.sh  update_commands_help.sh  update_fpgas_doc.sh
.github/workflows/: Publish.yml  build-and-release.yaml  build-darwin-arm64-installer.yml  build-darwin-arm64.yaml  build-darwin-x86-64.yaml  build-linux-x86-64-installer.yml  build-linux-x86-64.yaml  build-pre-release.yaml  build-windows-amd64-installer.yml  build-windows-amd64.yaml  build.yml  monitor-apio-latest.yaml  monitor-apio-prod.yaml  monitor-apio-pypi.yaml  publish-docs.yaml  publish-mkdocs-docs.yaml  publish-to-pypi.yaml  publish-to-test-pypi.yaml  publish.yml  test.yaml  test.yml
apio/: SConstruct  __init__.py  __main__.py  api.py  apio_context.py  cmd_util.py  config.py  downloader.py  drivers.py  env_options.py  example.py  examples.py  exception.py  execute.py  install.py  installer.py  new_installer.py  pkg_util.py  profile.py  project.py  resources.py  scons_util.py  unpacker.py  util.py
apio-repositories/: index.html
apio/commands/: apio.py  apio_api.py  apio_boards.py  apio_build.py  apio_clean.py  apio_create.py  apio_devices.py  apio_docs.py  apio_docs_apio_ini.py  apio_docs_options.py  apio_drivers.py  apio_drivers_ftdi.py  apio_drivers_install.py  apio_drivers_list.py  apio_drivers_serial.py  apio_drivers_uninstall.py  apio_examples.py  apio_format.py  apio_fpgas.py  apio_graph.py  apio_info.py  apio_labs.py  apio_lint.py  apio_packages.py  apio_preferences.py  apio_raw.py  apio_report.py  apio_sim.py  apio_system.py  apio_test.py  apio_upgrade.py  apio_upload.py  boards.py  build.py  clean.py  config.py  create.py  drivers.py  examples.py  format.py  (+18 more)
apio/common/: README.md  apio_console.py  apio_consts.py  apio_themes.py  common_util.py  pnr_util.py  rich_lib_windows.py  styles.py
apio/config/: boards.json  packages.json
apio/exporters/: __init__.py  json.py  markdown.py
apio/managers/: arguments.py  downloader.py  drivers.py  examples.py  installer.py  old_installer.py  packages.py  programmers.py  project.py  scons.py  scons_args.py  scons_filter.py  scons_manager.py  system.py  unpacker.py
apio/proto/: apio.proto  apio_pb2.py  apio_pb2.pyi  update-proto.sh  update-protos.sh
apio/resources/: .boards.json.swo  80-fpga-ftdi.rules  80-fpga-serial.rules  SConstruct  boards.json  boards.jsonc  (+11 more)
board-drivers/: index.html
check/: apio.ini  blink.pcf  blink.v
cmd-apio-api/: index.html
cmd-apio-boards/: index.html
cmd-apio-build/: index.html
cmd-apio-clean/: index.html
cmd-apio-create/: index.html
cmd-apio-devices/: index.html
cmd-apio-drivers/: index.html
cmd-apio-examples/: index.html
cmd-apio-format/: index.html
cmd-apio-fpgas/: index.html
cmd-apio-graph/: index.html
cmd-apio-info/: index.html
cmd-apio-lint/: index.html
cmd-apio-packages/: index.html
cmd-apio-preferences/: index.html
cmd-apio-raw/: index.html
cmd-apio-report/: index.html
cmd-apio-sim/: index.html
cmd-apio-test/: index.html
cmd-apio-upgrade/: index.html
cmd-apio-upload/: index.html
command-execution/: index.html
command-line/: index.html
contributing-definitions/: index.html
contributing-examples/: index.html
creating-apio-version/: index.html
creating-package-version/: index.html
custom-boards/: index.html
development-environment/: index.html
doc/: data.json
docs/: Makefile  additional-tools.md  apio-examples.md  apio-macros.md  apio-repositories.md  apio-vscode.md  board-drivers.md  cmd-apio-api.md  cmd-apio-boards.md  cmd-apio-build.md  cmd-apio-clean.md  cmd-apio-create.md  cmd-apio-devices.md  cmd-apio-docs.md  cmd-apio-drivers.md  cmd-apio-examples.md  cmd-apio-format.md  cmd-apio-fpgas.md  cmd-apio-graph.md  cmd-apio-info.md  cmd-apio-lint.md  cmd-apio-packages.md  cmd-apio-preferences.md  cmd-apio-raw.md  cmd-apio-report.md  cmd-apio-sim.md  cmd-apio-test.md  cmd-apio-upgrade.md  cmd-apio-upload.md  command-execution.md  command-line.md  commands-list.md  conf.py  contributing-definitions.md  contributing-examples.md  creating-apio-version.md  creating-package-version.md  custom-boards.md  developement-environment.md  development-environment.md  (+26 more)
docs-old-redirect/: .gitignore  .readthedocs.yaml  readthedocs.yaml
experimental/: README.md
help/: index.html
installing-apio/: index.html
migrating-from-apio-0xx/: index.html
project-file/: index.html
project-structure/: index.html
pyinstaller/: .gitignore  apio.spec  build.py
quick-start/: index.html
raw-tools/: index.html
remote-config/: README.md  apio-0.9.6.json  apio-0.9.6.jsonc  apio-0.9.7.jsonc  apio-1.0.0.jsonc  apio-1.0.1.jsonc  apio-1.0.2.jsonc  apio-1.1.x.jsonc  apio-1.2.x.jsonc  apio-1.3.x.jsonc  apio-1.4.x.jsonc  apio-1.5.x.jsonc
scripts/: COMMANDS.md  COMMANDS.txt  apio_help.md  check-icestudio-test-examples.sh  collect_apio_help.py  diff_jsonc.py  gen-repo-cleaner.sh  generate_boards_doc.py  generate_commands_help.py  generate_fpgas_doc.py  genereate-repo-cleaner.sh  replace-oss-cad-suite.sh  update_apio_help.sh  update_commands_doc.sh  update_commands_txt.sh
search/: search_index.json
supported-boards/: index.html
supported-fpgas/: index.html
system-requirements/: index.html
terminology/: index.html
test/: README.md  conftest.py  first_test.py  test_apio.py  test_apio_context.py  test_cmd_util.py  test_complete.py  test_end_to_end.py  test_profile.py  test_resources.py  test_scons_util.py  test_util.py
test-examples/: README.md
test2/: test_ledon.py
tests/: conftest.py  first_test.py
updating-the-docs/: index.html
using-examples/: index.html
using-system-verilog/: index.html
using-testbenches/: index.html
video-tutorial/: index.html
(+619 files in other folders)
