# Apio's project file.
# Package version is set in apio/__init.py

[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "apio"
author = "Jesus Arroyo"
author-email = "jesus.jkhlg@gmail.com "
home-page = "https://github.com/FPGAwars/apio"
classifiers=[
        'Development Status :: 5 - Production/Stable',
        'Environment :: Console',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: GNU General Public License v2 (GPLv2)',
        'Programming Language :: Python',
        'Natural Language :: English',
        'Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)',
]
description-file = "README.md"
requires-python = ">=3.9"
requires = [
    'click==8.1.8',
    'colorama==0.4.6',
    'configobj==5.0.9',
    'debugpy==1.8.11',
    'packaging==24.2',
    'pyserial==3.5',
    'requests==2.32.3',
    'scons==4.8.1',
    'semantic_version==2.10.0',
    'wheel==0.45.1',
    'blackiceprog==2.0.0',
    'tinyfpgab==1.1.0',
    'tinyprog==1.0.21',
    'icefunprog==2.0.3',
    'apycula==0.15',
    'apollo_fpga==1.1.1',
    'protobuf==5.29.3',
    'rich==13.9.4'
]

[tool.flit.sdist]
exclude = ["test-examples/"]

[tool.flit.metadata.requires-extra]
blackiceprog = ['blackiceprog==2.0.0']
litterbox = ['litterbox==0.2.2']
tinyfpgab = ['tinyfpgab==1.1.0']
icefunprog = ['icefunprog==2.0.3']


[tool.flit.scripts]
apio = "apio.__main__:main"

[tool.black]
line-length = 79
target-version = ['py39']

[tool.pylint.messages_control]
disable = [
          ]
