# Apio's project file.
# Package version is set in apio/__init.py

[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata.urls]
"Homepage" = "https://github.com/fpgawars/apio"
"Documentation" = "https://fpgawars.github.io/apio/docs"
"Bugs Tracker" = "https://github.com/fpgawars/apio/issues"
"Wiki" = "https://github.com/fpgawars/apio/wiki"
"Discussions" = "https://github.com/fpgawars/apio/discussions"

[tool.flit.metadata]
module = "apio"
author = "Jesus Arroyo"
author-email = "jesus.jkhlg@gmail.com "
home-page = "https://github.com/fpgawars/apio"
description-file = "README.md"
classifiers=[
        'Development Status :: 5 - Production/Stable',
        'Environment :: Console',
        'Intended Audience :: Developers',
        'License :: OSI Approved :: GNU General Public License v2 (GPLv2)',
        'Programming Language :: Python',
        'Natural Language :: English',
        'Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)',
]
requires-python = ">=3.11"
requires = [
    'click==8.2.1',
    'colorama==0.4.6',
    'configobj==5.0.9',
    'debugpy==1.8.19',
    'packaging==25.0',
    'pyserial==3.5',
    'requests==2.32.4',
    'scons==4.8.1',
    'semantic_version==2.10.0',
    'wheel==0.45.1',
    'blackiceprog==2.0.0',
    'tinyfpgab==1.1.0',
    'tinyprog==1.0.21',
    'icefunprog==2.0.3',
    'apycula==0.15',
    'apollo_fpga==1.1.1',
    'protobuf==6.33.0',
    'rich==14.0.0',
    'invoke==2.2.1'
]

[tool.flit.sdist]
# TODO: Revisit 'exclude`. What else we don't need in the package?
exclude = ["tests/"]

[tool.flit.metadata.requires-extra]
blackiceprog = ['blackiceprog==2.0.0']
litterbox = ['litterbox==0.2.2']
tinyfpgab = ['tinyfpgab==1.1.0']
icefunprog = ['icefunprog==2.0.3']

[tool.flit.scripts]
apio = "apio.__main__:main"

[tool.black]
line-length = 79
target-version = ['py311']

# NOTE: For pylint control see .pylintrc in this directory.
# It allows controls that pyproject.toml doesn't support.
