# Apio's project file.
# Package version is set in apio/__init.py

[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata.urls]
"Homepage" = "https://github.com/fpgawars/apio"
"Documentation" = "https://fpgawars.github.io/apio/docs"
"Bugs Tracker" = "https://github.com/fpgawars/apio/issues"
"Discussions" = "https://github.com/fpgawars/apio/discussions"
"Apio IDE" = "https://marketplace.visualstudio.com/items?itemName=fpgawars.apio"

[tool.flit.metadata]
module = "apio"
author = "Jesus Arroyo"
author-email = "jesus.jkhlg@gmail.com "
home-page = "https://github.com/fpgawars/apio"
# For convinience, we use the same readme file for the github repo
# and for PyPi. Can split them if needed.
description-file = "README.md"
classifiers=[
        'Development Status :: 5 - Production/Stable',
        'Environment :: Console',
        'Intended Audience :: Developers',
        "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Programming Language :: Python :: 3.14",
        'Natural Language :: English',
        'Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)',
]
requires-python = ">=3.11"
requires = [
    'click==8.2.1',
    'colorama==0.4.6',
    'configobj==5.0.9',
    'debugpy==1.8.19',
    'packaging==25.0',
    'pyserial==3.5',
    'requests==2.33.1',
    'scons==4.8.1',
    'semantic_version==2.10.0',
    'wheel==0.45.1',
    'blackiceprog==2.0.0',
    'tinyfpgab==1.1.0',
    'tinyprog==1.0.21',
    'icefunprog==2.0.3',
    'apollo_fpga==1.1.1',
    'protobuf==6.33.0',
    'rich==14.0.0',
    'vcdvcd==2.6.0',
    'invoke==2.2.1'
]

[tool.flit.sdist]
# Note that we don't include 'media/' nor do we have relative references
# from README.md to resources in media since pypi doesn't show them 
# correctly. Instead we use absolute links to github.
include = [
    "apio/",
    "pyproject.toml",
    "README.md",
    "LICENSE",
]

[tool.flit.scripts]
apio = "apio.__main__:main"

[tool.black]
line-length = 79
target-version = ['py311']

# NOTE: For pylint control see .pylintrc in this directory.
# It allows controls that pyproject.toml doesn't support.
